add blue gradient background meshy
Entire-Checkpoint: c97f7c3bbfb6

--- a/index.html
+++ b/index.html
@@ -4,8 +4,34 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>excessive-bonobo</title>
+  <style>
+    body {
+      margin: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+      color: #ffffff;
+      /* Meshy blue gradient */
+      background:
+        radial-gradient(900px 700px at 15% 20%, rgba(72, 170, 255, 0.85) 0%, rgba(72, 170, 255, 0) 60%),
+        radial-gradient(800px 650px at 85% 25%, rgba(0, 120, 255, 0.75) 0%, rgba(0, 120, 255, 0) 60%),
+        radial-gradient(900px 700px at 40% 85%, rgba(0, 200, 255, 0.45) 0%, rgba(0, 200, 255, 0) 60%),
+        radial-gradient(700px 600px at 75% 80%, rgba(40, 90, 255, 0.45) 0%, rgba(40, 90, 255, 0) 60%),
+        linear-gradient(135deg, #061a3a 0%, #0a2a66 40%, #06325c 100%);
+      background-attachment: fixed;
+    }
+
+    h1 {
+      font-size: 3rem;
+      margin: 0;
+      color: #ffffff;
+      text-shadow: 0 6px 28px rgba(0, 0, 0, 0.35);
+    }
+  </style>
 </head>
-<body style="margin:0;display:flex;align-items:center;justify-content:center;height:100vh;font-family:system-ui,sans-serif;background:#fafafa;color:#888">
-  <h1 style="font-size:3rem">empty index.html</h1>
+<body>
+  <h1>Hello world</h1>
 </body>
 </html>
